// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Financial data assembly — golden regression > produces a stable asset for a Brazilian equity (PETR4.SA) 1`] = `
{
  "evolutionStats": {
    "cagrNetIncome": -0.18044908728427111,
    "cagrRevenue": -0.09777609415647592,
    "trendMargin": "stable",
    "trendRevenue": "deteriorating",
    "volatilityRevenue": 0.0985,
  },
  "financialsHistory": [
    {
      "buybacks": null,
      "capex": null,
      "cash": null,
      "croic": null,
      "debt": null,
      "dividends": null,
      "ebit": 0,
      "ebitda": 0,
      "equity": null,
      "freeCashFlow": null,
      "grossProfit": 0,
      "netIncome": 188328000000,
      "operatingCashFlow": null,
      "revenue": 641256000000,
      "roa": null,
      "roe": null,
      "roic": null,
      "workingCapital": null,
      "year": 2022,
    },
    {
      "buybacks": null,
      "capex": null,
      "cash": null,
      "croic": null,
      "debt": null,
      "dividends": null,
      "ebit": 0,
      "ebitda": 0,
      "equity": null,
      "freeCashFlow": null,
      "grossProfit": 0,
      "netIncome": 123919831600,
      "operatingCashFlow": null,
      "revenue": 509986579100,
      "roa": null,
      "roe": null,
      "roic": null,
      "workingCapital": null,
      "year": 2023,
    },
    {
      "buybacks": null,
      "capex": null,
      "cash": null,
      "croic": null,
      "debt": null,
      "dividends": null,
      "ebit": 0,
      "ebitda": 0,
      "equity": null,
      "freeCashFlow": null,
      "grossProfit": 0,
      "netIncome": 43473447200,
      "operatingCashFlow": null,
      "revenue": 527918258400,
      "roa": null,
      "roe": null,
      "roic": null,
      "workingCapital": null,
      "year": 2024,
    },
    {
      "buybacks": null,
      "capex": null,
      "cash": null,
      "croic": null,
      "debt": null,
      "dividends": null,
      "ebit": 0,
      "ebitda": 0,
      "equity": null,
      "freeCashFlow": null,
      "grossProfit": 0,
      "netIncome": 103667520000,
      "operatingCashFlow": null,
      "revenue": 470949600000,
      "roa": null,
      "roe": null,
      "roic": null,
      "workingCapital": null,
      "year": 2025,
    },
  ],
  "history": {
    "firstClose": 39.060001373291016,
    "lastClose": 40.59000015258789,
    "length": 23,
  },
  "incomeAnalysis": {
    "netMarginTrend": "deteriorating",
    "years": [
      {
        "netIncome": 188328000000,
        "netMargin": 0.2936861409483888,
        "revenue": 641256000000,
        "year": 2022,
      },
      {
        "netIncome": 123919831600,
        "netMargin": 0.24298645626849202,
        "revenue": 509986579100,
        "year": 2023,
      },
      {
        "netIncome": 43473447200,
        "netMargin": 0.08234882296315743,
        "revenue": 527918258400,
        "year": 2024,
      },
      {
        "netIncome": 103667520000,
        "netMargin": 0.22012444643758058,
        "revenue": 470949600000,
        "year": 2025,
      },
    ],
  },
  "metrics": {
    "cashFlow": {
      "cashConversionRatio": 0.4253616211194196,
      "fcfYield": 0.14953591641183767,
      "freeCashFlow": 82932752384,
      "operatingCashFlow": 194969993216,
    },
    "dividends": {
      "dividendGrowth": "Supported",
      "dividendYield": 0.0959,
      "exDividendDate": "2026-06-02",
      "lastDividend": 0.700973,
      "payoutRatio": 0.3117,
    },
    "growth": {
      "dividendGrowth3Yr": null,
      "ebitdaGrowth3Yr": null,
      "netIncomeGrowth3Yr": -0.18044908728427111,
      "quarterlyEarningsGrowth": null,
      "quarterlyRevenueGrowth": 0.004,
      "revenueGrowth3Yr": -0.09777609415647592,
    },
    "leverage": {
      "currentRatio": 0.743,
      "debtToEquity": 83.269,
      "interestCoverage": null,
      "netDebtToEbitda": null,
      "quickRatio": 0.426,
      "totalCash": 47600001024,
      "totalDebt": 371690995712,
    },
    "profitability": {
      "croic": null,
      "grossMargin": 0.47359002,
      "netMargin": 0.21599,
      "operatingMargin": 0.31947002,
      "roa": 0.08231,
      "roe": 0.25601,
      "roic": null,
    },
    "valuation": {
      "dividendYield": 0.0959,
      "enterpriseValue": 848427679744,
      "evToEbit": null,
      "evToEbitda": 4.169,
      "evToSales": 1.703,
      "forwardPe": 4.2014284,
      "marketCap": 554600890368,
      "pe": 4.99262,
      "pegRatio": 3.83,
      "priceToBook": 1.1751252,
      "priceToSales": 1.1134529,
    },
  },
  "profile": {
    "businessSummary": "Petróleo Brasileiro S.A. - Petrobras explores, produces, and sells oil and gas in Brazil, China, the United States, the Americas, Asia, Europe, Singapore, and internationally. It operates through three segments: Exploration and Production; Refining, Transportation & Marketing; and Gas & Low Carbon Energies. The Exploration and Production segment explores, develops, and produces crude oil, natural gas liquids, and natural gas primarily for supplies to the domestic refineries. Its Refining, Transportation and Marketing segment engages in the refining, logistics, transport, acquisition, and export of crude oil; trading of oil products; and production of fertilizers, as well as holding interests in petrochemical companies. The Gas and Low Carbon Energies segment is involved in the logistic and trading of natural gas and electricity; transportation and trading of liquefied natural gas; generation of electricity through thermoelectric power plants; renewable energy business; low carbon business; and natural gas processing business, as well as production of biodiesel and its co-products. It also engages in prospecting, drilling, refining, processing, trading, and transporting crude oil from producing onshore and offshore oil fields, and shale or other rocks, as well as oil products, natural gas, and other liquid hydrocarbons. In addition, the company engages in research, development, production, transportation, distribution, and trading of energy. Petróleo Brasileiro S.A. - Petrobras was incorporated in 1953 and is headquartered in Rio De Janeiro, Brazil.",
    "change1mPercent": 5.32,
    "change1yPercent": 27.9,
    "change7dPercent": 2.37,
    "country": "Brazil",
    "currency": "BRL",
    "currentPrice": 40.59,
    "employees": 43199,
    "exchange": "SAO",
    "industry": "Oil & Gas Integrated",
    "name": "Petróleo Brasileiro S.A. - Petrobras",
    "priceChange": -0.069999695,
    "priceChangePercent": -0.17,
    "sector": "Energy",
    "shortName": "PETROBRAS   PN      N2",
    "symbol": "PETR4.SA",
    "website": "https://petrobras.com.br",
  },
  "provenance": {
    "financials": "live",
    "fundamentals": "live",
    "incomeAnalysis": "derived",
    "research": "live",
    "thesis": "derived",
    "valuationModel": "derived",
  },
  "research": {
    "businessModel": "Operates in Oil & Gas Integrated within the Energy sector.",
    "dataSource": "Yahoo Finance",
    "dataUpdated": "Live",
    "filingsAnalysis": {
      "growthOutlook": "Not available from this data source.",
      "marginComments": "Not available from this data source.",
      "recentGuidance": "Latest analyst consensus recommendation: buy.",
      "strategicChanges": "Not available from this data source.",
    },
    "history": "Petróleo Brasileiro S.A. - Petrobras explores, produces, and sells oil and gas in Brazil, China, the United States, the Americas, Asia, Europe, Singapore, and internationally. It operates through three segments: Exploration and Production; Refining, Transportation & Marketing; and Gas & Low Carbon Energies. The Exploration and Production segment explores, develops, and produces crude oil, natural gas liquids, and natural gas primarily for supplies to the domestic refineries. Its Refining, Transportation and Marketing segment engages in the refining, logistics, transport, acquisition, and export of crude oil; trading of oil products; and production of fertilizers, as well as holding interests in petrochemical companies. The Gas and Low Carbon Energies segment is involved in the logistic and trading of natural gas and electricity; transportation and trading of liquefied natural gas; generation of electricity through thermoelectric power plants; renewable energy business; low carbon business; and natural gas processing business, as well as production of biodiesel and its co-products. It also engages in prospecting, drilling, refining, processing, trading, and transporting crude oil from producing onshore and offshore oil fields, and shale or other rocks, as well as oil products, natural gas, and other liquid hydrocarbons. In addition, the company engages in research, development, production, transportation, distribution, and trading of energy. Petróleo Brasileiro S.A. - Petrobras was incorporated in 1953 and is headquartered in Rio De Janeiro, Brazil.",
    "keyCompetitors": [],
    "keyProducts": [],
    "regulatoryRisks": [],
    "reliabilityTier": "Tier 3 (Aggregator)",
  },
  "scores": {
    "businessQuality": {
      "breakdown": [
        {
          "benchmark": "14.0%",
          "explanation": "Excellent Return on Equity (ROE: 25.6%) exceeds high hurdle of 20.0%.",
          "maxPoints": 25,
          "name": "Return on Equity (ROE)",
          "points": 25,
          "value": "25.6%",
          "weight": 25,
        },
        {
          "benchmark": "8.0%",
          "explanation": "Strong ROA (8.2%) indicates highly efficient asset utilization.",
          "maxPoints": 15,
          "name": "Return on Assets (ROA)",
          "points": 15,
          "value": "8.2%",
          "weight": 15,
        },
        {
          "benchmark": "50.0%",
          "explanation": "Moderate Gross Margin (47.4%) within normal range.",
          "maxPoints": 20,
          "name": "Gross Margin",
          "points": 10,
          "value": "47.4%",
          "weight": 20,
        },
        {
          "benchmark": "14.0%",
          "explanation": "Operating Margin of 31.9% is significantly above sector average.",
          "maxPoints": 20,
          "name": "Operating Margin",
          "points": 20,
          "value": "31.9%",
          "weight": 20,
        },
        {
          "benchmark": "15.0%",
          "explanation": "Healthy Net Profit Margin of 21.6%.",
          "maxPoints": 20,
          "name": "Net Profit Margin",
          "points": 20,
          "value": "21.6%",
          "weight": 20,
        },
      ],
      "details": [
        "Excellent Return on Equity (ROE: 25.6%) exceeds high hurdle of 20.0%.",
        "Strong ROA (8.2%) indicates highly efficient asset utilization.",
        "Moderate Gross Margin (47.4%) within normal range.",
        "Operating Margin of 31.9% is significantly above sector average.",
        "Healthy Net Profit Margin of 21.6%.",
      ],
      "methodology": "Evaluates profitability ratios (ROE, ROA, and Margins) relative to sector specific benchmarks and absolute hurdles.",
      "score": 95,
    },
    "consolidated": 64,
    "efficiency": {
      "breakdown": [
        {
          "benchmark": "50.0%",
          "explanation": "Excellent overhead management: Retains 67.5% of gross profits as operating profits.",
          "maxPoints": 71,
          "name": "Gross-to-Operating Profit Conversion",
          "points": 71,
          "value": "67.5%",
          "weight": 71,
        },
        {
          "benchmark": "80.0%",
          "explanation": "Standard FCF conversion of 42.5%.",
          "maxPoints": 29,
          "name": "Free Cash Flow Conversion Ratio",
          "points": 15,
          "value": "42.5%",
          "weight": 29,
        },
      ],
      "details": [
        "Excellent overhead management: Retains 67.5% of gross profits as operating profits.",
        "Standard FCF conversion of 42.5%.",
      ],
      "methodology": "Analyzes overhead conversion, operating leverage efficiency, and FCF generation capability.",
      "score": 93,
    },
    "financialHealth": {
      "breakdown": [
        {
          "benchmark": "80.0%",
          "explanation": "Standard leverage: Debt/Equity ratio (83.3%) is inline with industry.",
          "maxPoints": 30,
          "name": "Debt to Equity Ratio",
          "points": 15,
          "value": "83.3%",
          "weight": 30,
        },
        {
          "benchmark": "1.50",
          "explanation": "Liquidity risk: Current Ratio of 0.74 indicates liabilities exceed current assets.",
          "maxPoints": 30,
          "name": "Current Ratio",
          "points": -30,
          "value": "0.74",
          "weight": 30,
        },
        {
          "benchmark": "1.00",
          "explanation": "Sub-optimal Quick Ratio of 0.43 indicates inventory dependencies for solvency.",
          "maxPoints": 20,
          "name": "Quick Ratio",
          "points": -10,
          "value": "0.43",
          "weight": 20,
        },
        {
          "benchmark": "> 0",
          "explanation": "Free Cash Flow is positive, providing a protective buffer for debt obligations.",
          "maxPoints": 20,
          "name": "Free Cash Flow Cushion",
          "points": 20,
          "value": "Positive",
          "weight": 20,
        },
      ],
      "details": [
        "Standard leverage: Debt/Equity ratio (83.3%) is inline with industry.",
        "Liquidity risk: Current Ratio of 0.74 indicates liabilities exceed current assets.",
        "Sub-optimal Quick Ratio of 0.43 indicates inventory dependencies for solvency.",
        "Free Cash Flow is positive, providing a protective buffer for debt obligations.",
      ],
      "methodology": "Evaluates structural capital leverage and liquidity buffers to measure overall insolvency/liquidity risk.",
      "score": 48,
    },
    "growth": {
      "breakdown": [
        {
          "benchmark": "4.0%",
          "explanation": "Revenue Growth (0.4%) lags sector benchmark of 4.0%.",
          "maxPoints": 100,
          "name": "YoY Revenue Growth",
          "points": -30,
          "value": "0.4%",
          "weight": 100,
        },
      ],
      "details": [
        "Revenue Growth (0.4%) lags sector benchmark of 4.0%.",
        "Earnings growth data unavailable.",
      ],
      "methodology": "Evaluates year-over-year top-line and bottom-line expansion rates against sector benchmarks.",
      "score": 35,
    },
    "valuation": {
      "breakdown": [
        {
          "benchmark": "14.00",
          "explanation": "Significant discount: PE ratio (4.20) is at a >30% discount vs sector benchmark of 14.",
          "maxPoints": 40,
          "name": "P/E Ratio (Trailing/Forward)",
          "points": 40,
          "value": "4.20",
          "weight": 40,
        },
        {
          "benchmark": "1.20",
          "explanation": "Expensive growth pricing: PEG ratio is elevated at 3.83, signaling overvalued growth expectation.",
          "maxPoints": 40,
          "name": "PEG Ratio",
          "points": -40,
          "value": "3.83",
          "weight": 40,
        },
        {
          "benchmark": "2.00",
          "explanation": "Low price-to-book multiple of 1.18.",
          "maxPoints": 20,
          "name": "Price to Book (P/B) Ratio",
          "points": 20,
          "value": "1.18",
          "weight": 20,
        },
      ],
      "details": [
        "Significant discount: PE ratio (4.20) is at a >30% discount vs sector benchmark of 14.",
        "Expensive growth pricing: PEG ratio is elevated at 3.83, signaling overvalued growth expectation.",
        "Low price-to-book multiple of 1.18.",
      ],
      "methodology": "Compares valuation multiples against historical industry benchmarks to assess the available margin of safety.",
      "score": 60,
    },
  },
  "thesis": {
    "baseCase": "Base case follows current fundamentals: returns, growth and leverage holding near present levels.",
    "bearCase": [
      "No major quantitative red flags in the current data.",
    ],
    "bullCase": [
      "Strong ROE of 26%.",
      "Healthy gross margin of 47%.",
      "Generates positive free cash flow.",
    ],
    "capitalAllocation": {
      "description": "Assessment derived from real ROIC, free cash flow and shareholder-return history.",
      "factors": [
        "Sustainable dividend payout (<60%)",
      ],
      "score": 60,
    },
    "moat": {
      "classification": "Narrow Moat",
      "description": "Moderate returns and margins suggest a limited but real competitive edge.",
      "factors": [
        "ROE 26% — strong returns on equity",
        "Positive free cash flow generation",
      ],
    },
    "risks": {
      "description": "Risk scores are computed from real leverage, liquidity, valuation and cash-flow signals.",
      "factors": [
        {
          "description": "Debt/Equity at 83%.",
          "name": "Financial / Leverage Risk",
          "score": 42,
        },
        {
          "description": "Higher when multiples are rich versus the sector benchmark.",
          "name": "Valuation Risk",
          "score": 40,
        },
        {
          "description": "Current ratio 0.74.",
          "name": "Liquidity Risk",
          "score": 75,
        },
        {
          "description": "Positive free cash flow.",
          "name": "Cash-Flow Risk",
          "score": 20,
        },
      ],
      "overallScore": 44,
    },
    "thesisSummary": "Composite fundamental profile scores 60/100 across quality, growth, health and valuation. See factor breakdown for drivers.",
    "valuation": {
      "currentPrice": 40.59,
      "dcfScenarios": {
        "base": {
          "discountRate": 6,
          "growthRate": -5,
          "intrinsicValue": 236.63,
          "name": "Base Scenario",
          "terminalMultiple": 28.6,
        },
        "bear": {
          "discountRate": 8,
          "growthRate": -5,
          "intrinsicValue": 159.11,
          "name": "Bear Scenario",
          "terminalMultiple": 18.2,
        },
        "bull": {
          "discountRate": 5,
          "growthRate": -2,
          "intrinsicValue": 419.4,
          "name": "Bull Scenario",
          "terminalMultiple": 40,
        },
      },
      "reverseDcf": {
        "expectedReturn": 6,
        "impliedGrowthRate": -10,
      },
    },
  },
}
`;

exports[`Financial data assembly — golden regression > produces a stable asset for a US equity (AAPL) 1`] = `
{
  "evolutionStats": {
    "cagrNetIncome": 0.039212592033254,
    "cagrRevenue": 0.01812535743479393,
    "trendMargin": "stable",
    "trendRevenue": "improving",
    "volatilityRevenue": 0.0377,
  },
  "financialsHistory": [
    {
      "buybacks": null,
      "capex": null,
      "cash": null,
      "croic": null,
      "debt": null,
      "dividends": null,
      "ebit": 0,
      "ebitda": 0,
      "equity": null,
      "freeCashFlow": null,
      "grossProfit": 0,
      "netIncome": 99803000000,
      "operatingCashFlow": null,
      "revenue": 394328000000,
      "roa": null,
      "roe": null,
      "roic": null,
      "workingCapital": null,
      "year": 2022,
    },
    {
      "buybacks": null,
      "capex": null,
      "cash": null,
      "croic": null,
      "debt": null,
      "dividends": null,
      "ebit": 0,
      "ebitda": 0,
      "equity": null,
      "freeCashFlow": null,
      "grossProfit": 0,
      "netIncome": 96995000000,
      "operatingCashFlow": null,
      "revenue": 383285000000,
      "roa": null,
      "roe": null,
      "roic": null,
      "workingCapital": null,
      "year": 2023,
    },
    {
      "buybacks": null,
      "capex": null,
      "cash": null,
      "croic": null,
      "debt": null,
      "dividends": null,
      "ebit": 0,
      "ebitda": 0,
      "equity": null,
      "freeCashFlow": null,
      "grossProfit": 0,
      "netIncome": 93736000000,
      "operatingCashFlow": null,
      "revenue": 391035000000,
      "roa": null,
      "roe": null,
      "roic": null,
      "workingCapital": null,
      "year": 2024,
    },
    {
      "buybacks": null,
      "capex": null,
      "cash": null,
      "croic": null,
      "debt": null,
      "dividends": null,
      "ebit": 0,
      "ebitda": 0,
      "equity": null,
      "freeCashFlow": null,
      "grossProfit": 0,
      "netIncome": 112010000000,
      "operatingCashFlow": null,
      "revenue": 416161000000,
      "roa": null,
      "roe": null,
      "roic": null,
      "workingCapital": null,
      "year": 2025,
    },
  ],
  "history": {
    "firstClose": 299.239990234375,
    "lastClose": 327.5,
    "length": 20,
  },
  "incomeAnalysis": {
    "netMarginTrend": "improving",
    "years": [
      {
        "netIncome": 99803000000,
        "netMargin": 0.2530964070519973,
        "revenue": 394328000000,
        "year": 2022,
      },
      {
        "netIncome": 96995000000,
        "netMargin": 0.2530623426432028,
        "revenue": 383285000000,
        "year": 2023,
      },
      {
        "netIncome": 93736000000,
        "netMargin": 0.23971255769943867,
        "revenue": 391035000000,
        "year": 2024,
      },
      {
        "netIncome": 112010000000,
        "netMargin": 0.2691506412181824,
        "revenue": 416161000000,
        "year": 2025,
      },
    ],
  },
  "metrics": {
    "cashFlow": {
      "cashConversionRatio": 0.7209335381362467,
      "fcfYield": 0.02101631053222745,
      "freeCashFlow": 101090746368,
      "operatingCashFlow": 140222005248,
    },
    "dividends": {
      "dividendGrowth": "Supported",
      "dividendYield": 0.0034,
      "exDividendDate": "2026-05-11",
      "lastDividend": 0.27,
      "payoutRatio": 0.1259,
    },
    "growth": {
      "dividendGrowth3Yr": null,
      "ebitdaGrowth3Yr": null,
      "netIncomeGrowth3Yr": 0.039212592033254,
      "quarterlyEarningsGrowth": null,
      "quarterlyRevenueGrowth": 0.166,
      "revenueGrowth3Yr": 0.01812535743479393,
    },
    "leverage": {
      "currentRatio": 1.07,
      "debtToEquity": 79.548,
      "interestCoverage": null,
      "netDebtToEbitda": null,
      "quickRatio": 0.906,
      "totalCash": 68507000832,
      "totalDebt": 84710998016,
    },
    "profitability": {
      "croic": null,
      "grossMargin": 0.47862,
      "netMargin": 0.27152002,
      "operatingMargin": 0.32275,
      "roa": 0.26229,
      "roe": 1.4147099,
      "roic": null,
    },
    "valuation": {
      "dividendYield": 0.0034,
      "enterpriseValue": 4826313261056,
      "evToEbit": null,
      "evToEbitda": 30.169,
      "evToSales": 10.691,
      "forwardPe": 34.04044,
      "marketCap": 4810109091840,
      "pe": 38.170162,
      "pegRatio": 2.55,
      "priceToBook": 45.11019,
      "priceToSales": 10.654987,
    },
  },
  "profile": {
    "businessSummary": "Apple Inc. designs, manufactures, and markets smartphones, personal computers, tablets, wearables, and accessories worldwide. The company offers iPhone, a line of smartphones; Mac, a line of personal computers; iPad, a line of multi-purpose tablets; and wearables, home, and accessories comprising AirPods, Apple Vision Pro, Apple TV, Apple Watch, Beats products, and HomePod, as well as Apple branded and third-party accessories. It also provides AppleCare support and cloud services; and operates various platforms, including the App Store that allows customers to discover and download applications and digital content, such as books, music, video, games, and podcasts, as well as advertising services include third-party licensing arrangements and its own advertising platforms. In addition, the company offers various subscription-based services, such as Apple Arcade, a game subscription service; Apple Fitness+, a personalized fitness service; Apple Music, which offers users a curated listening experience with on-demand radio stations; Apple News+, a subscription news and magazine service; Apple TV, which offers original content and live sports; Apple Card, a co-branded credit card; and Apple Pay, a cashless payment service, as well as licenses its intellectual property. The company serves consumers, and small and mid-sized businesses; and the education, enterprise, and government markets. It distributes third-party applications for its products through the App Store. The company also sells its products through its retail and online stores, and direct sales force; and third-party cellular network carriers and resellers. The company was formerly known as Apple Computer, Inc. and changed its name to Apple Inc. in January 2007. Apple Inc. was founded in 1976 and is headquartered in Cupertino, California.",
    "change1mPercent": 9.44,
    "change1yPercent": 55.83,
    "change7dPercent": 4.5,
    "country": "United States",
    "currency": "USD",
    "currentPrice": 327.5,
    "employees": 166000,
    "exchange": "NMS",
    "industry": "Consumer Electronics",
    "name": "Apple Inc.",
    "priceChange": 12.64,
    "priceChangePercent": 4.01,
    "sector": "Technology",
    "shortName": "Apple Inc.",
    "symbol": "AAPL",
    "website": "https://www.apple.com",
  },
  "provenance": {
    "financials": "live",
    "fundamentals": "live",
    "incomeAnalysis": "derived",
    "research": "live",
    "thesis": "derived",
    "valuationModel": "derived",
  },
  "research": {
    "businessModel": "Operates in Consumer Electronics within the Technology sector.",
    "dataSource": "Yahoo Finance",
    "dataUpdated": "Live",
    "filingsAnalysis": {
      "growthOutlook": "Not available from this data source.",
      "marginComments": "Not available from this data source.",
      "recentGuidance": "Latest analyst consensus recommendation: buy.",
      "strategicChanges": "Not available from this data source.",
    },
    "history": "Apple Inc. designs, manufactures, and markets smartphones, personal computers, tablets, wearables, and accessories worldwide. The company offers iPhone, a line of smartphones; Mac, a line of personal computers; iPad, a line of multi-purpose tablets; and wearables, home, and accessories comprising AirPods, Apple Vision Pro, Apple TV, Apple Watch, Beats products, and HomePod, as well as Apple branded and third-party accessories. It also provides AppleCare support and cloud services; and operates various platforms, including the App Store that allows customers to discover and download applications and digital content, such as books, music, video, games, and podcasts, as well as advertising services include third-party licensing arrangements and its own advertising platforms. In addition, the company offers various subscription-based services, such as Apple Arcade, a game subscription service; Apple Fitness+, a personalized fitness service; Apple Music, which offers users a curated listening experience with on-demand radio stations; Apple News+, a subscription news and magazine service; Apple TV, which offers original content and live sports; Apple Card, a co-branded credit card; and Apple Pay, a cashless payment service, as well as licenses its intellectual property. The company serves consumers, and small and mid-sized businesses; and the education, enterprise, and government markets. It distributes third-party applications for its products through the App Store. The company also sells its products through its retail and online stores, and direct sales force; and third-party cellular network carriers and resellers. The company was formerly known as Apple Computer, Inc. and changed its name to Apple Inc. in January 2007. Apple Inc. was founded in 1976 and is headquartered in Cupertino, California.",
    "keyCompetitors": [],
    "keyProducts": [],
    "regulatoryRisks": [],
    "reliabilityTier": "Tier 3 (Aggregator)",
  },
  "scores": {
    "businessQuality": {
      "breakdown": [
        {
          "benchmark": "18.0%",
          "explanation": "Excellent Return on Equity (ROE: 141.5%) exceeds high hurdle of 20.0%.",
          "maxPoints": 25,
          "name": "Return on Equity (ROE)",
          "points": 25,
          "value": "141.5%",
          "weight": 25,
        },
        {
          "benchmark": "8.0%",
          "explanation": "Strong ROA (26.2%) indicates highly efficient asset utilization.",
          "maxPoints": 15,
          "name": "Return on Assets (ROA)",
          "points": 15,
          "value": "26.2%",
          "weight": 15,
        },
        {
          "benchmark": "50.0%",
          "explanation": "Moderate Gross Margin (47.9%) within normal range.",
          "maxPoints": 20,
          "name": "Gross Margin",
          "points": 10,
          "value": "47.9%",
          "weight": 20,
        },
        {
          "benchmark": "22.0%",
          "explanation": "Operating Margin of 32.3% is significantly above sector average.",
          "maxPoints": 20,
          "name": "Operating Margin",
          "points": 20,
          "value": "32.3%",
          "weight": 20,
        },
        {
          "benchmark": "15.0%",
          "explanation": "Healthy Net Profit Margin of 27.2%.",
          "maxPoints": 20,
          "name": "Net Profit Margin",
          "points": 20,
          "value": "27.2%",
          "weight": 20,
        },
      ],
      "details": [
        "Excellent Return on Equity (ROE: 141.5%) exceeds high hurdle of 20.0%.",
        "Strong ROA (26.2%) indicates highly efficient asset utilization.",
        "Moderate Gross Margin (47.9%) within normal range.",
        "Operating Margin of 32.3% is significantly above sector average.",
        "Healthy Net Profit Margin of 27.2%.",
      ],
      "methodology": "Evaluates profitability ratios (ROE, ROA, and Margins) relative to sector specific benchmarks and absolute hurdles.",
      "score": 95,
    },
    "consolidated": 70,
    "efficiency": {
      "breakdown": [
        {
          "benchmark": "50.0%",
          "explanation": "Excellent overhead management: Retains 67.4% of gross profits as operating profits.",
          "maxPoints": 71,
          "name": "Gross-to-Operating Profit Conversion",
          "points": 71,
          "value": "67.4%",
          "weight": 71,
        },
        {
          "benchmark": "80.0%",
          "explanation": "Standard FCF conversion of 72.1%.",
          "maxPoints": 29,
          "name": "Free Cash Flow Conversion Ratio",
          "points": 15,
          "value": "72.1%",
          "weight": 29,
        },
      ],
      "details": [
        "Excellent overhead management: Retains 67.4% of gross profits as operating profits.",
        "Standard FCF conversion of 72.1%.",
      ],
      "methodology": "Analyzes overhead conversion, operating leverage efficiency, and FCF generation capability.",
      "score": 93,
    },
    "financialHealth": {
      "breakdown": [
        {
          "benchmark": "70.0%",
          "explanation": "Standard leverage: Debt/Equity ratio (79.5%) is inline with industry.",
          "maxPoints": 30,
          "name": "Debt to Equity Ratio",
          "points": 15,
          "value": "79.5%",
          "weight": 30,
        },
        {
          "benchmark": "1.50",
          "explanation": "Acceptable short-term liquidity: Current Ratio is 1.07.",
          "maxPoints": 30,
          "name": "Current Ratio",
          "points": 15,
          "value": "1.07",
          "weight": 30,
        },
        {
          "benchmark": "1.00",
          "explanation": "Sub-optimal Quick Ratio of 0.91 indicates inventory dependencies for solvency.",
          "maxPoints": 20,
          "name": "Quick Ratio",
          "points": -10,
          "value": "0.91",
          "weight": 20,
        },
        {
          "benchmark": "> 0",
          "explanation": "Free Cash Flow is positive, providing a protective buffer for debt obligations.",
          "maxPoints": 20,
          "name": "Free Cash Flow Cushion",
          "points": 20,
          "value": "Positive",
          "weight": 20,
        },
      ],
      "details": [
        "Standard leverage: Debt/Equity ratio (79.5%) is inline with industry.",
        "Acceptable short-term liquidity: Current Ratio is 1.07.",
        "Sub-optimal Quick Ratio of 0.91 indicates inventory dependencies for solvency.",
        "Free Cash Flow is positive, providing a protective buffer for debt obligations.",
      ],
      "methodology": "Evaluates structural capital leverage and liquidity buffers to measure overall insolvency/liquidity risk.",
      "score": 70,
    },
    "growth": {
      "breakdown": [
        {
          "benchmark": "12.0%",
          "explanation": "Solid Revenue Growth (16.6% YoY) matches or exceeds sector benchmark.",
          "maxPoints": 100,
          "name": "YoY Revenue Growth",
          "points": 70,
          "value": "16.6%",
          "weight": 100,
        },
      ],
      "details": [
        "Solid Revenue Growth (16.6% YoY) matches or exceeds sector benchmark.",
        "Earnings growth data unavailable.",
      ],
      "methodology": "Evaluates year-over-year top-line and bottom-line expansion rates against sector benchmarks.",
      "score": 85,
    },
    "valuation": {
      "breakdown": [
        {
          "benchmark": "28.00",
          "explanation": "Slight premium: PE ratio (34.04) is slightly above sector average.",
          "maxPoints": 40,
          "name": "P/E Ratio (Trailing/Forward)",
          "points": -12,
          "value": "34.04",
          "weight": 40,
        },
        {
          "benchmark": "1.20",
          "explanation": "Expensive growth pricing: PEG ratio is elevated at 2.55, signaling overvalued growth expectation.",
          "maxPoints": 40,
          "name": "PEG Ratio",
          "points": -40,
          "value": "2.55",
          "weight": 40,
        },
        {
          "benchmark": "2.00",
          "explanation": "Premium book value pricing: Price-to-Book is high at 45.11.",
          "maxPoints": 20,
          "name": "Price to Book (P/B) Ratio",
          "points": -20,
          "value": "45.11",
          "weight": 20,
        },
      ],
      "details": [
        "Slight premium: PE ratio (34.04) is slightly above sector average.",
        "Expensive growth pricing: PEG ratio is elevated at 2.55, signaling overvalued growth expectation.",
        "Premium book value pricing: Price-to-Book is high at 45.11.",
      ],
      "methodology": "Compares valuation multiples against historical industry benchmarks to assess the available margin of safety.",
      "score": 14,
    },
  },
  "thesis": {
    "baseCase": "Base case follows current fundamentals: returns, growth and leverage holding near present levels.",
    "bearCase": [
      "Trades at a premium to sector valuation benchmarks.",
    ],
    "bullCase": [
      "Strong ROE of 141%.",
      "Healthy gross margin of 48%.",
      "Revenue growing 17% YoY.",
      "Generates positive free cash flow.",
    ],
    "capitalAllocation": {
      "description": "Assessment derived from real ROIC, free cash flow and shareholder-return history.",
      "factors": [
        "Sustainable dividend payout (<60%)",
      ],
      "score": 60,
    },
    "moat": {
      "classification": "Narrow Moat",
      "description": "Moderate returns and margins suggest a limited but real competitive edge.",
      "factors": [
        "ROE 141% — strong returns on equity",
        "Positive free cash flow generation",
      ],
    },
    "risks": {
      "description": "Risk scores are computed from real leverage, liquidity, valuation and cash-flow signals.",
      "factors": [
        {
          "description": "Debt/Equity at 80%.",
          "name": "Financial / Leverage Risk",
          "score": 40,
        },
        {
          "description": "Higher when multiples are rich versus the sector benchmark.",
          "name": "Valuation Risk",
          "score": 86,
        },
        {
          "description": "Current ratio 1.07.",
          "name": "Liquidity Risk",
          "score": 35,
        },
        {
          "description": "Positive free cash flow.",
          "name": "Cash-Flow Risk",
          "score": 20,
        },
      ],
      "overallScore": 45,
    },
    "thesisSummary": "Composite fundamental profile scores 66/100 across quality, growth, health and valuation. See factor breakdown for drivers.",
    "valuation": {
      "currentPrice": 327.5,
      "dcfScenarios": {
        "base": {
          "discountRate": 9.5,
          "growthRate": 1.8,
          "intrinsicValue": 96.01,
          "name": "Base Scenario",
          "terminalMultiple": 14.3,
        },
        "bear": {
          "discountRate": 11.5,
          "growthRate": -1.2,
          "intrinsicValue": 61.1,
          "name": "Bear Scenario",
          "terminalMultiple": 11.1,
        },
        "bull": {
          "discountRate": 8.5,
          "growthRate": 4.8,
          "intrinsicValue": 140.76,
          "name": "Bull Scenario",
          "terminalMultiple": 16.7,
        },
      },
      "reverseDcf": {
        "expectedReturn": 9.5,
        "impliedGrowthRate": 18.3,
      },
    },
  },
}
`;
